--- a/Michelle_Garcia_Final_Project_DataTools.ipynb
+++ b/Michelle_Garcia_Final_Project_DataTools.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Final Project\n",
-    "## Data Visualization"
+    "## Data Sci Tools 1"
    ]
   },
   {
